<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pnd.future_bosses.plannedanddone.Pomodoro"
    android:orientation="vertical">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">

 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="5dp"
        android:layout_gravity="center|top"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Pomodoro"
            android:onClick="pomoWork"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_break"
            android:onClick="pomoShort"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/long_break"
            android:onClick="pomoLong"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textColor="#199E45"
            android:textSize="60dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/col"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="#199E45"
            android:textSize="60dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textColor="#199E45"
            android:textSize="60dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout

                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="50dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youWon"

                    android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_gravity="center|bottom" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center|bottom"
            android:onClick="stratTimer"
            android:text="@string/start" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center|bottom"
            android:onClick="pauseTimer"
            android:text="@string/pause" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center|bottom"
            android:onClick="resetTimer"
            android:text="@string/reset" />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>