<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/previousMonth"
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/previ"/>

    <TextView
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/current_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/space"
        android:textColor="@color/green"
        android:textSize="28sp" />

    <ImageButton
        android:id="@+id/nextMonth"
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/next1"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="7">

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/saturday"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/sunday"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/monday"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/tuesday"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/wednesday"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/thursday"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/friday"
        android:textColor="@color/green"
        android:textSize="16sp" />

</LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/calendar_week_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <!-- dodano radi ispisa zadataka -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Zadaci"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>

</ScrollView>

</LinearLayout>