<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pnd.future_bosses.plannedanddone.EditCategories">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="Categories"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="25dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        android:hint="@string/addcategory"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:onClick="addNewCategory"
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginLeft="90dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="backToMain"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


    <ListView
        android:id="@+id/listView"
        android:layout_width="227dp"
        android:layout_height="273dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.503" />

</android.support.constraint.ConstraintLayout>


