<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pnd.future_bosses.plannedanddone.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/MyTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mytasks"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="filterAndSort"
        android:text="Sort &amp; Filter"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/listOfTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/Planned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planned"
                android:textSize="16sp"
                android:textColor="@color/calendar_number"/>


            <LinearLayout
                android:id="@+id/plannedTasksLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

            </LinearLayout>


            <TextView
                android:id="@+id/Done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textSize="16sp"
                android:textColor="@color/calendar_number"/>

            <LinearLayout
                android:id="@+id/doneTasksLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="140dp">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
