<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pnd.future_bosses.plannedanddone.AddTaskActivity"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_task_is"
            android:textSize="17dp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:ems="17"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewoptional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        android:textSize="13dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/calendar_number"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_plan_to_finish_task_by"
            android:textSize="17dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/plannedView"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="23dp"
            android:text=""
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="13dp"
            app:layout_constraintRight_toLeftOf="@+id/b_p"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/b_p"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/date_time"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView4"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline_for_task_is"
            android:textSize="17dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/deadlineView"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="23dp"
            android:text=""
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="13dp"
            app:layout_constraintRight_toLeftOf="@+id/b_d"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/b_d"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/date_time"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_of_task"
            android:textSize="17dp"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:gravity="right"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_of_task"
            android:textSize="17dp"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView6"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:gravity="right"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|bottom"
        android:layout_weight="1">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textAllCaps="false"
            android:onClick="cancel"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textAllCaps="false"
            android:onClick="save"/>

    </LinearLayout>


</LinearLayout>
